# cloud-storage-rs

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml  test.sh
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: listbucket.rs
src/: client.rs  download_options.rs  error.rs  lib.rs  service_account.rs  sized_byte_stream.rs  sync.rs  token.rs
src/builders/: bucket.rs  mod.rs
src/client/: bucket.rs  bucket_access_control.rs  client.rs  default_object_access_control.rs  hmac_key.rs  mod.rs  object.rs  object_access_control.rs
src/configuration/: mod.rs  service_account.rs
src/crypto/: mod.rs  openssl.rs  ring.rs
src/global_client/: bucket.rs  bucket_access_control.rs  default_object_access_control.rs  hmac_key.rs  mod.rs  object.rs  object_access_control.rs
src/models/: action.rs  action_type.rs  billing.rs  binding.rs  bucket.rs  bucket_access_control.rs  compose_parameters.rs  compose_request.rs  condition.rs  copy_paramters.rs  cors.rs  customer_encryption.rs  default_object_access_control.rs  delete_parameters.rs  encryption.rs  entity.rs  error.rs  error_list.rs  error_reason.rs  error_response.rs  hmac_key.rs  hmac_metadata.rs  hmac_state.rs  iam_condition.rs  iam_configuration.rs  iam_policy.rs  iam_role.rs  legacy_iam_role.rs  lifecycle.rs  list_response.rs  location.rs  logging.rs  mod.rs  notification.rs  object.rs  object_access_control.rs  object_access_control_list.rs  object_create_parameters.rs  object_list.rs  object_list_request.rs  (+24 more)
src/models/create/: bucket.rs  bucket_access_control.rs  default_object_access_control.rs  mod.rs  notification.rs  object_access_control.rs  payload_format.rs
src/resources/: bucket.rs  bucket_access_control.rs  channel.rs  common.rs  default_object_access_control.rs  hmac_key.rs  location.rs  mod.rs  notification.rs  object.rs  object_access_control.rs  service_account.rs  signature.rs  topic.rs
src/sync/: bucket.rs  bucket_access_control.rs  client.rs  default_object_access_control.rs  helpers.rs  hmac_key.rs  mod.rs  object.rs  object_access_control.rs
src/sync/helpers/: reader_stream.rs
