[package]
name = "cloud-storage"
version = "0.11.0"
authors = ["Luuk Wester <luuk.wester@gmail.com>"]
edition = "2018"
description = "A crate for uploading files to Google cloud storage, and for generating download urls."
license = "MIT"
repository = "https://github.com/ThouCheese/cloud-storage-rs"
documentation = "https://docs.rs/cloud-storage"
keywords = ["google", "cloud", "storage"]
readme = "README.md"
categories = ["api-bindings", "web-programming"]
resolver = "2"
# maintenance = { status = "actively-developed" }

[features]
default = ["native-tls"]

global-client = []
sync = ["reqwest/blocking"]
native-tls = ["reqwest/default-tls", "openssl"]
rustls-tls = ["reqwest/rustls-tls", "ring", "pem"]
trust-dns = ["reqwest/trust-dns"]

[dependencies]
reqwest =          { version = "0.11", default-features = false, features = ["json", "stream"] }
percent-encoding = { version = "2",    default-features = false }
jsonwebtoken =     { version = "7",    default-features = false }
serde =            { version = "1",    default-features = false, features = ["derive"] }
serde_json =       { version = "1",    default-features = false }
base64 =           { version = "0.13", default-features = false }
lazy_static =      { version = "1",    default-features = false }
dotenv =           { version = "0.15", default-features = false }
openssl =          { version = "0.10", default-features = false, optional = true }
ring =             { version = "0.16", default-features = false, optional = true }
pem =              { version = "0.8",  default-features = false, optional = true }
chrono =           { version = "0.4",  default-features = false, features = ["serde"] }
hex =              { version = "0.4",  default-features = false, features = ["alloc"] }
tokio =            { version = "1.0",  default-features = false, features = ["macros", "rt"] }
futures-util =     { version = "0.3",  default_features = false, features = ["alloc"] }
bytes =            { version = "1.0",  default-features = false }
async-trait =      { version = "0.1.48", default-features = false }

[dev-dependencies]
tokio =            { version = "1.0",  default-features = false, features = ["full"] }

[package.metadata.docs.rs]
features = ["global-client", "sync"]
